--- a/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
+++ b/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
@@ -1326,7 +1326,7 @@ Prediction_RF_Prob <- predict(Random_Forest, EB_Validation, type="prob")
 Confusion_Matrix_RF <- confusionMatrix(data = Prediction_RF, reference = EB_Validation$`Competitive?`)
 
 # Create the Function for Confusion Matrix
-draw_confusion_matrix_RF <- function(cm) {
+draw_confusion_matrix_RF <- function(cm2) {
 
   layout(matrix(c(1,1,2)))
   par(mar=c(2,2,2,2))
